# sd2video

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: api_contract.md  ark_video_api.md  asset_input_strategy.md  local_codex_image.md  real_environment_acceptance.md  seedance2_frontend_reference.md
frontend_current/frontend/: app-components.jsx  canvas.html  canvas.standalone.html  panel.jsx
src/sd2video/: __init__.py  local_image_server.py  local_images.py
src/sd2video/ark/: __init__.py  assets.py  client.py  config.py  errors.py  task_models.py  transport.py  types.py  workflow.py
src/sd2video/server/: __init__.py  __main__.py  app.py  capabilities.py  cli.py  config.py  errors.py  service.py
tests/: test_ark_client.py  test_assets.py  test_config.py  test_create_task.py  test_frontend_contract.py  test_frontend_service.py  test_integration.py  test_local_images.py  test_mock_backend_e2e.py  test_server.py  test_smoke_ark_video_api.py  test_workflow.py
